Fixed z-index. refs #4446

--- a/tracmenus/htdocs/css/tracmenus.css
+++ b/tracmenus/htdocs/css/tracmenus.css
@@ -4,6 +4,7 @@
 	margin:			0;
 	padding:		0;
 	list-style:		none;
+	z-index:		99;
 }
 
 .sf-menu ul {
